apps/.disabled/jellyfin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  labels:
    network-egress-dns: "true"
    network-egress-world: "true"
    network-ingress-monitoring: "true"
